assets/css/main.css
/* ... */
#hero .wrapper .welcome p {
    max-width: 450px;
    margin-bottom: 30px
}

@media (max-width: 1180px) {
    #hero .wrapper .welcome:after {
        display: none
    }
    #hero .wrapper .welcome p {
        margin-bottom: 0
    }
}

#hero .wrapper .photographer {
    width: 55%;
    -webkit-align-self: flex-end;
    -ms-flex-item-align: end;
    align-self: flex-end;
    line-height: 0
}

#hero .wrapper .photographer img {
    width: 100%;
    opacity: .95
}
@media (min-width: 1024px) {
    .reversed .wrapper .blurb > * {
        margin-left: 100px;
    }

    .reversed .wrapper .blurb::after {
        margin-left: 100px;
    }
}

@media (max-width: 1023px) {
    .reversed .wrapper {
        flex-direction: column-reverse!important;
    }
}

ul.banner li img {
    width: 100%;
}

@media (max-width: 1023px) {
    #hero .wrapper .welcome {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        width: 100%;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-align: end;
        -webkit-align-items: flex-end;
        -ms-flex-align: end;
        align-items: flex-end;
        text-align: right
    }
    
    #hero .wrapper {
        flex-direction: column;
        align-items: center;
        justify-content: end;
        -webkit-align-self: unset;
        -ms-flex-item-align: unset;
        align-self: unset;
    }

    #hero .wrapper .photographer {
        /* display: none */
    }
}

@media (max-width: 640px) {
    #hero .wrapper .welcome {
        -webkit-box-align: center;
        -webkit-align-items: center;
        -ms-flex-align: center;
        -ms-grid-row-align: center;
        align-items: center;
        text-align: center
    }
}

#about {
    position: relative;
    width: 1440px;
    max-width: 95%;
    height: 600px;
    margin: 30px auto;
    background-color: #efefef;
    overflow: hidden
}

@media (max-width: 768px) {
    #about {
        margin: 15px auto
    }
}

#about .wrapper {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 1180px;
    max-width: 95%;
    height: 100%;
    margin: 0 auto;
    -webkit-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center
}

#about .wrapper .camera {
    width: 45%
}

#about .wrapper .camera img {
    width: 95%
}

#about .wrapper .blurb {
    width: 55%
}

#about .wrapper .blurb h2 {
    margin-top: 0;
    margin-bottom: 30px;
    font-size: 42px;
    font-family: "Raleway", Helvetica, sans-serif;
    font-weight: 100
}

@media (max-width: 640px) {
    #about .wrapper .blurb h2 {
        margin-bottom: 20px;
        font-size: 30px
    }
}

#about .wrapper .blurb h2:before {
    content: "";
    position: relative;
    bottom: 15px;
    display: inline-block;
    width: 70px;
    height: 1px;
    margin-right: 30px;
    background-color: #111
}

#about .wrapper .blurb p {
    max-width: 600px;
    margin-bottom: 45px
}

.wrapper .blurb .social {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    width: 180px;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between
}

.wrapper .blurb .social a {
    color: #fff;
    text-decoration: none
}

.wrapper .blurb .social i {
    display: block;
    width: 30px;
    height: 30px;
    font-size: 16px;
    text-align: center;
    line-height: 30px;
    background-color: #909090;
    -webkit-transition: background-color .2s ease-in-out;
    transition: background-color .2s ease-in-out
}

.wrapper .blurb .social i:hover {
    background-color: #020202
}

@media (max-width: 1023px) {
    #about .wrapper .camera {
        /* display: none */
    }

    #about .wrapper .blurb {
        display: -webkit-box;
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        width: 100%;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-align: end;
        -webkit-align-items: flex-end;
        -ms-flex-align: end;
        align-items: flex-end;
        text-align: right
    }
    #about .wrapper .blurb h2:before {
        display: none
    }
}

@media (max-width: 640px) {
    #about .wrapper .blurb {
        -webkit-box-align: center;
        -webkit-align-items: center;
        -ms-flex-align: center;
        -ms-grid-row-align: center;
        align-items: center;
        text-align: center
    }
}

#full-slide {
    position: relative;
    width: 1440px;
    max-width: 95%;
    height: 720px;
    margin: 30px auto;
    background-color: #efefef;
    overflow: hidden
}

@media (max-width: 768px) {
    #full-slide {
        margin: 15px auto
    }
}

#full-slide .banner {
    position: relative;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    list-style: none
}

#full-slide .banner li {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    opacity: 0;
    -webkit-transition: opacity .6s ease-in-out;
    transition: opacity .6s ease-in-out
}

#full-slide .banner li.active {
    opacity: 1;
    -webkit-transition: opacity .6s ease-in-out;
    transition: opacity .6s ease-in-out
}
/* ... */

